--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -2,15 +2,18 @@
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/feedFragment">
+    app:startDestination="@id/popularFragment">
 
     <fragment
-        android:id="@+id/feedFragment"
-        android:name="com.jlroberts.flixat.ui.feed.FeedFragment"
-        android:label="FeedFragment" >
+        android:id="@+id/popularFragment"
+        android:name="com.jlroberts.flixat.ui.popular.PopularFragment"
+        android:label="Popular" >
         <action
             android:id="@+id/action_feedFragment_to_detailFragment"
             app:destination="@id/detailFragment" />
+        <action
+            android:id="@+id/action_feedFragment_to_hilt_NowPlaying"
+            app:destination="@id/nowPlayingFragment" />
     </fragment>
     <fragment
         android:id="@+id/detailFragment"
@@ -18,6 +21,17 @@
         android:label="DetailFragment" >
         <action
             android:id="@+id/action_detailFragment_to_feedFragment"
-            app:destination="@id/feedFragment" />
+            app:destination="@id/popularFragment" />
+        <action
+            android:id="@+id/action_detailFragment_to_NowPlaying"
+            app:destination="@id/nowPlayingFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/nowPlayingFragment"
+        android:name="com.jlroberts.flixat.ui.nowplaying.NowPlayingFragment"
+        android:label="Now playing" >
+        <action
+            android:id="@+id/action_nowPlaying_to_detailFragment"
+            app:destination="@id/detailFragment" />
     </fragment>
 </navigation>
