--- a/app/src/main/res/layout/fragment_popular.xml
+++ b/app/src/main/res/layout/fragment_popular.xml
@@ -22,6 +22,7 @@
             <com.google.android.material.appbar.MaterialToolbar
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
+                style="@style/FlixatToolbar"
                 android:layout_height="?attr/actionBarSize"
                 app:layout_scrollFlags="scroll|enterAlways" />
         </com.google.android.material.appbar.AppBarLayout>
