--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
+
     <data>
         <variable
             name="viewModel"
@@ -8,7 +11,224 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:fitsSystemWindows="true">
+
+        <androidx.core.widget.NestedScrollView
+            android:id="@+id/scroll_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:fitsSystemWindows="false">
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="325dp">
+
+                <androidx.appcompat.widget.AppCompatImageView
+                    android:id="@+id/backdrop"
+                    android:layout_width="match_parent"
+                    android:layout_height="325dp"
+                    android:scaleType="centerCrop"
+                    app:movieImage="@{viewModel.movie.backdropPath.original}"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="325dp"
+                    android:background="@drawable/gradient"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <androidx.appcompat.widget.AppCompatImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:tint="@color/md_theme_dark_onSurface"
+                    app:srcCompat="@drawable/ic_baseline_arrow_back_24"
+                    app:layout_constraintTop_toTopOf="parent"
+                    android:layout_marginTop="48dp"
+                    android:layout_marginStart="24dp"/>
+
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/movie_image_card"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.0"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/backdrop"
+                    app:layout_constraintBottom_toBottomOf="@id/backdrop"
+                    app:cardElevation="4dp"
+                    app:cardCornerRadius="8dp"
+                    android:layout_marginStart="16dp">
+                    <ImageView
+                        android:id="@+id/movie_image"
+                        android:layout_width="120dp"
+                        android:layout_height="200dp"
+                        app:movieImage="@{viewModel.movie.posterPath.large}"
+                        android:scaleType="centerCrop"
+                        />
+                </androidx.cardview.widget.CardView>
+
+                <com.google.android.material.textview.MaterialTextView
+                    android:id="@+id/title_text"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginEnd="16dp"
+                    android:layout_marginBottom="8dp"
+                    android:ellipsize="end"
+                    android:maxLines="3"
+                    android:text="@{viewModel.movie.title}"
+                    android:textColor="@color/md_theme_dark_onSurface"
+                    app:layout_constraintVertical_weight="@id/backdrop"
+                    android:textAppearance="@style/TextAppearance.Material3.HeadlineMedium"
+                    app:layout_constraintBottom_toBottomOf="@+id/backdrop"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0"
+                    app:layout_constraintStart_toEndOf="@id/movie_image_card"
+                    app:layout_constraintTop_toBottomOf="@id/backdrop"
+                    app:layout_constraintVertical_bias="1.0"
+                    app:layout_constraintTop_toTopOf="@+id/movie_image_card" />
+
+                <com.google.android.material.textview.MaterialTextView
+                    android:id="@+id/tagline"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginEnd="16dp"
+                    android:ellipsize="end"
+                    android:maxLines="2"
+                    android:text="@{viewModel.movie.tagline}"
+                    android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toEndOf="@id/movie_image_card"
+                    app:layout_constraintTop_toBottomOf="@+id/backdrop"
+                    tools:text="asdl;kjfasdfl;kj ;lkajsdlkj lkjasdflkjasdlkfjasdlkfjlkj" />
+
+                <com.google.android.material.textview.MaterialTextView
+                    android:id="@+id/release_date"
+                    android:layout_marginTop="8dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintTop_toBottomOf="@id/tagline"
+                    app:layout_constraintStart_toEndOf="@id/movie_image_card"
+                    android:layout_marginStart="16dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0"
+                    tools:text="1009"
+                    app:date="@{viewModel.movie.releaseDate}" />
+
+                <com.google.android.material.textview.MaterialTextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    app:layout_constraintTop_toBottomOf="@id/tagline"
+                    app:layout_constraintStart_toEndOf="@id/release_date"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    tools:text="120 min"
+                    app:layout_constraintHorizontal_bias="0"
+                    android:layout_marginStart="8dp"
+                    android:text="@{@string/runtime_format(viewModel.movie.runtime)}" />
+
+                <com.google.android.material.chip.ChipGroup
+                    android:layout_height="wrap_content"
+                    android:layout_width="match_parent"
+                    app:layout_constraintTop_toBottomOf="@id/movie_image_card"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    android:id="@+id/chip_group" />
+
+                <com.google.android.material.textview.MaterialTextView
+                    android:id="@+id/cast_label"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/chip_group"
+                    android:layout_marginTop="16dp"
+                    android:layout_marginStart="16dp"
+                    android:text="Cast"
+                    android:textAppearance="@style/TextAppearance.Material3.TitleLarge" />
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/cast_recycler"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingStart="8dp"
+                    android:paddingEnd="8dp"
+                    android:clipToPadding="false"
+                    android:layout_marginTop="16dp"
+                    app:layout_constraintTop_toBottomOf="@id/cast_label"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent" />
+                <com.google.android.material.button.MaterialButton
+                    android:id="@+id/trailer_button"
+                    android:layout_width="0dp"
+                    android:layout_marginLeft="48dp"
+                    android:layout_marginRight="48dp"
+                    android:visibility="gone"
+                    android:layout_height="wrap_content"
+                    android:text="View trailer"
+                    app:layout_constraintTop_toBottomOf="@id/cast_recycler"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent" />
+
+                <com.google.android.material.textview.MaterialTextView
+                    android:id="@+id/overview_label"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/trailer_button"
+                    android:layout_marginTop="32dp"
+                    android:layout_marginStart="16dp"
+                    android:text="Overview"
+                    android:textAppearance="@style/TextAppearance.Material3.TitleLarge" />
+                <com.google.android.material.textview.MaterialTextView
+                    android:id="@+id/overview_text"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/overview_label"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    android:text="@{viewModel.movie.overview}"
+                    app:layout_constraintHorizontal_bias="0"
+                    tools:text="Test movie title long see wrapped"
+                    android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
+                    android:layout_margin="16dp"/>
+
+                <com.google.android.material.textview.MaterialTextView
+                    android:id="@+id/provider_label"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/overview_text"
+                    android:layout_marginTop="32dp"
+                    android:layout_marginStart="16dp"
+                    android:text="Watch providers"
+                    android:textAppearance="@style/TextAppearance.Material3.TitleLarge" />
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/provider_recycler"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingStart="8dp"
+                    android:paddingEnd="8dp"
+                    android:clipToPadding="false"
+                    android:layout_marginTop="16dp"
+                    app:layout_constraintTop_toBottomOf="@id/provider_label"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent" />
+
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+        </androidx.core.widget.NestedScrollView>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
