--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -25,6 +25,9 @@
         <action
             android:id="@+id/action_detailFragment_to_NowPlaying"
             app:destination="@id/nowPlayingFragment" />
+        <argument
+            android:name="movieId"
+            app:argType="integer" />
     </fragment>
     <fragment
         android:id="@+id/nowPlayingFragment"
@@ -33,5 +36,8 @@
         <action
             android:id="@+id/action_nowPlaying_to_detailFragment"
             app:destination="@id/detailFragment" />
+        <argument
+            android:name="movie_id"
+            app:argType="integer" />
     </fragment>
 </navigation>
