--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -32,4 +32,7 @@
     <style name="FlixatToolbar" parent="@style/Widget.Material3.Toolbar.Surface">
         <item name="android:background">@color/md_theme_dark_primaryContainer</item>
     </style>
+    <style name="DetailToolbar" parent="ThemeOverlay.Material3">
+        <item name="colorControlNormal">@android:color/white</item>
+    </style>
 </resources>
