--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -18,7 +18,7 @@
     <fragment
         android:id="@+id/detailFragment"
         android:name="com.jlroberts.flixat.ui.detail.DetailFragment"
-        android:label="DetailFragment" >
+        android:label="" >
         <action
             android:id="@+id/action_detailFragment_to_feedFragment"
             app:destination="@id/popularFragment" />
