--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -108,7 +108,6 @@
                     android:layout_marginStart="24dp"
                     android:layout_marginTop="48dp"
                     android:contentDescription="@string/detail_back_content_description"
-                    android:onClick="@{() -> viewModel.backClicked()}"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                     app:srcCompat="@drawable/ic_baseline_arrow_back_24"
@@ -242,7 +241,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="48dp"
                     android:layout_marginRight="48dp"
-                    android:onClick="@{() -> viewModel.trailerButtonClicked()}"
+                    app:trailerKey="@{viewModel.state.trailerKey}"
                     android:text="@string/detail_view_trailer_btn_text"
                     android:visibility="gone"
                     app:layout_constraintEnd_toEndOf="parent"
